# wreten

./: CMakeLists.txt  README.md  cmake_install.cmake  wreten.cu  wreten.inp
4.24debug/cpp/: CMakeLists.txt  FindMECHSYS.cmake  cmake_install.cmake  water_retention.res
4.24debug/cuda/: CMakeLists.txt  cmake_install.cmake  plot.py  water_retention.res  wreten.inp
4.25debug/: readme.me
4.25debug/cpp/: cmake_install.cmake  wreten.cpp
4.25debug/cuda/: CMakeLists.txt  clean.sh  cmake_install.cmake  single.cu  wreten.cu  wreten.inp
weekend-debug/: CMakeLists.txt  clean.sh  cmake_install.cmake  test.cu  wreten.cpp  wreten.inp
